--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,3 @@
 # If we are a computer with nix-shell available, then use that to setup
 # the build environment with exactly what we need.
-if has nix; then
-  use nix
-fi
+use flake
